# proudnet_sample_tank_server

./: .gitignore  README.md  TankGame.sln  copy_client_generated_to_unity.bat  licensekey.txt
Client/: TankClient.cs  TankClient.csproj  Tank_common.cs  Tank_proxy.cs  build.bat
Common/: CompilePIDL_cpp.bat  CompilePIDL_cs.bat  Tank.PIDL  Vars.cpp  Vars.cs  Vars.h
Server/: Dockerfile  Dockerfile.full  Dockerfile.linux  Dockerfile.win  Dockerfile.windows  TankServer.cs  TankServer.csproj  Tank_stub.cs  build.bat  build.ps1  build_linux.ps1  build_windows.ps1  manual_windows.txt  prepare_docker.ps1  reset_docker.ps1  simple_build.ps1  windows_build.ps1
Server/win_build/: TankServer.deps.json
Server_CPP/: .dockerignore  CMakeLists.txt  Dockerfile  build.bat  docker-compose.yml  run.bat
Server_CPP/include/: Tank_common.cpp  Tank_common.h  Tank_proxy.cpp  Tank_proxy.h  Tank_stub.cpp  Tank_stub.h
Server_CPP/src/: TankServer.cpp
docs/: 01.server.cn.html  01.server.en.html  01.server.en.md  01.server.id.html  01.server.jp.html  01.server.kr.html  01.server.th.html  01.server.vn.html  02.tank_client.cn.html  02.tank_client.en.html  02.tank_client.en.md  02.tank_client.id.html  02.tank_client.jp.html  02.tank_client.kr.html  02.tank_client.th.html  02.tank_client.vn.html  03.unreal_shooter_sample.cn.html  03.unreal_shooter_sample.en.html  03.unreal_shooter_sample.id.html  03.unreal_shooter_sample.jp.html  03.unreal_shooter_sample.kr.html  03.unreal_shooter_sample.kr.md  03.unreal_shooter_sample.th.html  03.unreal_shooter_sample.vn.html  03.unreal_shooter_sample_en.html
docs/css/: styles.css  syntax-highlighting.css  webgl-embed.css
docs/includes/: image-modal.html
docs/js/: image-modal.js  language-selector.js  syntax-highlighting.js  webgl-embed.js
